[gd_scene load_steps=9 format=3 uid="uid://cyiriuph0yr6a"]

[ext_resource type="Script" path="res://Scripts/ai/Melee_Shadow_Hunter.gd" id="1_v2ryk"]
[ext_resource type="Texture2D" uid="uid://d0c3a70ob5v54" path="res://Assets/ai/melee_player_shadow.png" id="2_byxc3"]
[ext_resource type="Script" path="res://Scripts/ai/aiprojectilePool.gd" id="3_l8uts"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1lhkb"]
radius = 13.6015

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rni2y"]
bg_color = Color(0.6, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_il3e2"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="Gradient" id="Gradient_rvj8n"]
offsets = PackedFloat32Array(0, 0.995012, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.032419, 0.032419, 0.032419, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6h8lq"]
gradient = SubResource("Gradient_rvj8n")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Shadow" type="CharacterBody2D"]
light_mask = 3
z_index = -5
position = Vector2(313, 175)
collision_layer = 7
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 0.15
script = ExtResource("1_v2ryk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_1lhkb")

[node name="MeleeShadow" type="Sprite2D" parent="."]
light_mask = 3
visibility_layer = 3
z_index = -1
position = Vector2(-1, 0)
texture = ExtResource("2_byxc3")

[node name="ProgressBar" type="ProgressBar" parent="."]
light_mask = 3
visibility_layer = 3
z_index = -1
offset_left = -17.0
offset_top = -19.0
offset_right = 14.0
offset_bottom = -15.0
theme_override_styles/background = SubResource("StyleBoxFlat_rni2y")
theme_override_styles/fill = SubResource("StyleBoxFlat_il3e2")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Player Detection" type="Area2D" parent="."]
position = Vector2(-1, 0)
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player Detection"]
position = Vector2(3, 5)
polygon = PackedVector2Array(-9, 5, -6, 2, -12, 0, -17, -4, -17, -8, -12, -13, -3, -15, 6, -13, 11, -8, 11, -4, 6, 0, 0, 2, 3, 5, 3, 12, -9, 12)

[node name="Projectiles" type="Node2D" parent="."]
position = Vector2(-1, 0)
script = ExtResource("3_l8uts")

[node name="PointLight2D" type="PointLight2D" parent="."]
light_mask = 3
visibility_layer = 3
z_index = -2
position = Vector2(2, -4)
scale = Vector2(4.23523, 4.37226)
color = Color(0.733333, 0, 0.0196078, 1)
energy = 2.0
range_z_max = 3
texture = SubResource("GradientTexture2D_6h8lq")
texture_scale = 0.01

[node name="PointLight2D2" type="PointLight2D" parent="."]
light_mask = 3
visibility_layer = 3
z_index = -2
position = Vector2(-1, -6)
scale = Vector2(4.23523, 4.37226)
color = Color(0.733333, 0, 0.0196078, 1)
energy = 2.0
range_z_max = 3
texture = SubResource("GradientTexture2D_6h8lq")
texture_scale = 0.01

[node name="PointLight2D3" type="PointLight2D" parent="."]
light_mask = 3
visibility_layer = 3
z_index = -2
position = Vector2(-4, -4)
scale = Vector2(4.23523, 4.37226)
color = Color(0.733333, 0, 0.0196078, 1)
energy = 2.0
range_z_max = 3
texture = SubResource("GradientTexture2D_6h8lq")
texture_scale = 0.01

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="pathfinding_timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[connection signal="body_entered" from="Player Detection" to="." method="_on_player_detection_body_entered"]
[connection signal="timeout" from="pathfinding_timer" to="." method="_on_pathfinding_timer_timeout"]
